fix: padding in the welcome page and overflow of in small screens (#15690)
* fix: padding in the welcome page and overflow of meeting list

- Add padding to the header of the welcome page in small screens.
- Fix the tab content in the welcome page, because there was an ugly overflow.
- Create new color variables for welcome page button.

--- a/css/_meetings_list.scss
+++ b/css/_meetings_list.scss
@@ -7,8 +7,8 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    overflow: auto;
-    width: 100%;
+    overflow-y: auto;
+    flex-grow: 1;
 
     .meetings-list-empty {
         text-align: center;
